Fix overflow of list

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ html{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     background-color: #f8fafc;
@@ -22,10 +22,12 @@ html{
     box-shadow: 5px 5px 5px #e2e8f0;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 .sidebar-item{
     margin: 12px 12px 0 12px;
     cursor: pointer;
+
 }
 .list{
     font-weight: 100;
@@ -34,6 +36,7 @@ html{
     flex-direction: column;
     width: 100%;
     align-items: flex-start;
+    overflow: scroll;
 }
 .list-item{
     margin: 12px;
